# self-Multi-AI-Agent-Systems-with-crewAI

./: .gitignore  README.md  main.py  pyproject.toml
crew_1_research_write_articles/: L2_research_write_article.ipynb  article.md  main_L2.py
crew_2_customer_support_automation/: L3_customer_support.ipynb  crew_creation_support.md  main_L3.py
crew_3_tools_customer_outreach_campaign/: L4_tools_customer_outreach.ipynb  customer_outreach_campaign.md  main_L4.py
crew_4_automate_event_planning/: L5_tasks_event_planning.ipynb  marketing_report.md  venue_details.json
crew_5_multi-agent_financial_analysis/notebook_modified_execution/: DA_report_mid-low_risk.md  L6_collaboration_financial_analysis.ipynb  exec_plan_report_mid-low_risk.md  risk_assement_report_mid-low_risk.md  strategy_report_mid-low_risk.md
crew_5_multi-agent_financial_analysis/notebook_original_execution/: collaboration_financial_analysis.md
crew_6_job_application_crew/: L7_job_application_crew.ipynb  interview_materials.md  tailored_resume.md
