[project]
name = "self-multi-ai-agent-systems-with-crewai"
version = "0.1.0"
description = "This repo contains the all the execersices from Multi AI Agent Systems with crewAI (DeepLearningAI) course. It might also contain similar developments with my tweaks and trials either temporally or permanently."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai==0.28.8",
    "crewai-tools==0.1.6",
    "ipykernel>=7.2.0",
    "langchain-community==0.0.29",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
